# draw_tri

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tri_shader.wgsl
